Add debug logging when diagnostics cannot be loaded (#12)